Support for different Selenium implementations.
Additional changes:
 - one ContextAppender unified for both events bounded to the extension
 - holder able to hold different implementations than Selenium WebDriver