@@ -20,7 +20,7 @@
    <groupId>org.jboss.arquillian.extension</groupId>
    <artifactId>arquillian-selenium</artifactId>
    <name>Arquillian Extension Selenium</name>
-   <description>Extension adding Selenium functinality to Arquillian</description>
+   <description>Extension adding Selenium functionality to Arquillian</description>
 
    <properties>
       <!-- Versioning -->
@@ -37,9 +37,15 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
+         <groupId>org.jboss.arquillian</groupId>
+         <artifactId>arquillian-impl-base</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium</artifactId>
          <version>${version.selenium}</version>
+         <scope>test</scope>
          <exclusions>
             <exclusion>
                <artifactId>selenium-firefox-driver</artifactId>
@@ -129,100 +135,6 @@
             </plugins>
          </build>
       </profile>
-      <profile>
-         <id>jbossas-embedded-6</id>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.arquillian.container</groupId>
-               <artifactId>arquillian-jbossas-embedded-6</artifactId>
-               <version>${project.version}</version>
-            </dependency>
-            <dependency>
-               <!--
-                  Need on all profiles except Glassfish to compile, api
-                  is not 100% up to date with final spec
-               -->
-               <groupId>org.jboss.ejb3</groupId>
-               <artifactId>jboss-ejb3-api</artifactId>
-               <version>3.1.0</version>
-            </dependency>
-            <dependency>
-               <groupId>org.jboss.jbossas</groupId>
-               <artifactId>jboss-as-depchain</artifactId>
-               <version>${version.jboss_60}</version>
-               <type>pom</type>
-            </dependency>
-         </dependencies>
-         <dependencyManagement>
-            <dependencies>
-               <dependency>
-                  <groupId>org.jboss.jbossas</groupId>
-                  <artifactId>jboss-as-depchain</artifactId>
-                  <version>${version.jboss_60}</version>
-                  <type>pom</type>
-                  <scope>import</scope>
-               </dependency>
-            </dependencies>
-         </dependencyManagement>
-         <build>
-            <plugins>
-               <plugin>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <configuration>
-                     <additionalClasspathElements>
-                        <additionalClasspathElement>${project.build.directory}/jboss-${version.jboss_60}/client/jbossws-native-client.jar</additionalClasspathElement>
-                        <!--
-                           Because jbossweb.sar contains shared web.xml,
-                           which must be visible from same CL as
-                           TomcatDeployer.class.getClassLoader
-                        -->
-                        <additionalClasspathElement>${project.build.directory}/jboss-${version.jboss_60}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
-                     </additionalClasspathElements>
-
-                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                     <trimStackTrace>false</trimStackTrace>
-                     <printSummary>true</printSummary>
-                     <forkMode>once</forkMode>
-
-                     <!--
-                        MaxPermSize Required to bump the space for
-                        relective data like classes, methods, etc.
-                        EMB-41. Endorsed required for things like WS
-                        support (EMB-61)
-                     -->
-                     <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Djava.endorsed.dirs=${project.build.directory}/jboss-${version.jboss_60}/lib/endorsed -Djboss.home=${project.build.directory}/jboss-${version.jboss_60} -Djboss.boot.server.log.dir=${project.build.directory}/jboss-${version.jboss_60} -Dorg.jboss.reflect.spi.TypeInfoFactory=org.jboss.reflect.plugins.introspection.IntrospectionTypeInfoFactory</argLine>
-                  </configuration>
-               </plugin>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-dependency-plugin</artifactId>
-                  <executions>
-                     <execution>
-                        <id>unpack</id>
-                        <phase>process-test-classes</phase> <!-- So run before testing -->
-                        <goals>
-                           <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                           <artifactItems>
-                              <artifactItem>
-                                 <groupId>org.jboss.jbossas</groupId>
-                                 <artifactId>jboss-as-distribution</artifactId>
-                                 <version>${version.jboss_60}</version>
-                                 <type>zip</type>
-                                 <overWrite>false</overWrite>
-                                 <outputDirectory>${project.build.directory}</outputDirectory>
-                              </artifactItem>
-                           </artifactItems>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-
-
    </profiles>
 
 </project>
